--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,9 @@
   "devDependencies": {
     "@types/node": "^18.15.10",
     "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "@trpc/server": "^10.18.0",
+    "trpc": "^0.11.3"
   }
 }
