--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "@trpc/server": "^10.18.0",
     "trpc": "^0.11.3"
   }
