--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^4.11.0",
     "@trpc/server": "^10.18.0",
     "express": "^4.18.2",
-    "trpc": "^0.11.3"
+    "trpc": "^0.11.3",
+    "zod": "^3.21.4"
   }
 }
