--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "@trpc/server": "^10.18.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "trpc": "^0.11.3",
     "zod": "^3.21.4"
